engine/codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_inline_history_search.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: buffer_text(&buffer)
---

  2 of 2
  Second

    11. Option 11
    12. Option 12
  › 13. earlier answer
        reverse-i-search: e  enter accept · esc

  enter submit   ⌃] skip   option 13/13
  ⇧→ prev question
